# cockroach

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
apps/api/: config.py  dependencies.py  main.py
apps/desktop/: package.json
apps/worker/: config.py  main.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/ai_design/: agent_system.md
docs/api/: endpoints.md
docs/architecture/: overview.md
docs/deployment/: guide.md
domain/contracts/: analyzer.py  indexer.py  notifier.py  reporter.py
domain/events/: analysis_events.py  project_events.py  runtime_events.py
domain/exceptions/: analysis_exceptions.py  infra_exceptions.py  project_exceptions.py
domain/models/: analysis.py  finding.py  project.py  report.py  session.py
domain/value_objects/: confidence_score.py  file_path.py
graph/builders/: call_graph_builder.py  repo_graph_builder.py  service_graph_builder.py
graph/impact_analysis/: blast_radius.py  change_impact.py
graph/queries/: architecture_queries.py  dependency_queries.py  impact_queries.py
graph/relationship_engine/: edge_classifier.py  relationship_mapper.py
indexing/chunking/: ast_chunker.py  semantic_chunker.py
indexing/dependency_mapper/: call_mapper.py  import_mapper.py
indexing/parsers/: base_parser.py  cpp_parser.py  go_parser.py  java_parser.py  python_parser.py  registry.py  rust_parser.py  typescript_parser.py
indexing/scanners/: file_scanner.py  git_scanner.py  repo_scanner.py
scripts/: benchmark.py  generate_migration.sh  seed_db.py  setup.sh
tests/: conftest.py
(+120 files in other folders)
