[project]
name = "cockroach"
version = "0.1.0"
description = "A Next-Gen Debugger Made In Python And Tauri"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.2",
    "neo4j>=6.2.0",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "tree-sitter>=0.25.2",
    "uvicorn>=0.48.0",
]
